--- a/examples/docs_beta_snippets/pyproject.toml
+++ b/examples/docs_beta_snippets/pyproject.toml
@@ -10,6 +10,7 @@ line-length = 88
 extend-exclude = [
   "docs_beta_snippets/guides/components/existing-project/6-initial-definitions.py",
   "docs_beta_snippets/guides/components/shell-script-component/2-shell-command-empty.py"
+  "docs_beta_snippets/guides/components/migrating-definitions/2-definitions-before.py",
 ]
 
 [tool.ruff.lint]
