--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,13 +12,13 @@ parameters:
   - name: dagster_core_py3_env_suffixes
     type: object
     default:
-      - api_tests
+      # - api_tests
       - cli_tests
-      - general_tests
-      - launcher_tests
-      - daemon_tests
-      - daemon_sensor_tests
-      - scheduler_tests
+      # - general_tests
+      # - launcher_tests
+      # - daemon_tests
+      # - daemon_sensor_tests
+      # - scheduler_tests
 jobs:
   - job: "dagster"
     pool:
