--- a/python_modules/libraries/dagster-dg/tox.ini
+++ b/python_modules/libraries/dagster-dg/tox.ini
@@ -7,6 +7,7 @@ passenv =
     CI_*
     COVERALLS_REPO_TOKEN
     DAGSTER_GIT_REPO_DIR
+    PYTHON*
     BUILDKITE*
 install_command = uv pip install {opts} {packages}
 deps =
